[gd_scene load_steps=7 format=3 uid="uid://beudrafsaoj5l"]

[ext_resource type="Script" path="res://scenes/PauseMenu.gd" id="1_kyheg"]
[ext_resource type="Texture2D" uid="uid://cae4mdw01ohhw" path="res://res/exit.png" id="3_po86d"]
[ext_resource type="Texture2D" uid="uid://35lv3rbd8k50" path="res://res/play.png" id="4_6ia87"]
[ext_resource type="Texture2D" uid="uid://d8icl1n8g74w" path="res://res/cooltext452695336117952.png" id="4_plte4"]
[ext_resource type="Texture2D" uid="uid://dr0qy4ykxppmo" path="res://res/menu.png" id="4_qebd8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ickr5"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyheg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 40.0
offset_right = -44.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 28.0
offset_right = 312.0
offset_bottom = 230.0
grow_horizontal = 2
texture = ExtResource("4_plte4")

[node name="quit" type="Button" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -237.0
offset_top = 72.0
offset_right = -135.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ickr5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ickr5")
icon = ExtResource("3_po86d")
icon_alignment = 1
expand_icon = true

[node name="resume" type="Button" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 181.0
offset_top = 72.0
offset_right = 283.0
offset_bottom = 175.0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ickr5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ickr5")
icon = ExtResource("4_6ia87")
icon_alignment = 1
expand_icon = true

[node name="menu" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 72.5
offset_right = 52.0
offset_bottom = 175.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ickr5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ickr5")
icon = ExtResource("4_qebd8")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/menu" to="." method="_on_menu_pressed"]
